force-app/main/default/objects/Badge_Relevance__c/Badge_Relevance__c.object-meta.xml
<CustomObject>
    <label>Badge Relevance</label>
    <nameField>
        <label>Badge Relevance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Relevance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>