force-app/main/default/objects/Badge_Relevance__c/fields/associatedProducts__c.field-meta.xml
<CustomField>
    <fullName>associatedProducts__c</fullName>
    <label>associatedProducts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>