force-app/main/default/objects/Badge_Relevance__c/fields/associatedTags__c.field-meta.xml
<CustomField>
    <fullName>associatedTags__c</fullName>
    <label>associatedTags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>