force-app/main/default/objects/Badge_Relevance__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>trailheadapp__Badge__c</referenceTo>
    <relationshipLabel>Badge Relevance</relationshipLabel>
    <relationshipName>Badge_Relevance</relationshipName>
    <type>Lookup</type>
</CustomField>