force-app/main/default/objects/Badge_Relevance__c/fields/badgeDate__c.field-meta.xml
<CustomField>
    <fullName>badgeDate__c</fullName>
    <label>badgeDate</label>
    <type>DateTime</type>
</CustomField>