force-app/main/default/objects/Badge_Relevance__c/fields/badgeIcon__c.field-meta.xml
<CustomField>
    <fullName>badgeIcon__c</fullName>
    <label>badgeIcon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>