force-app/main/default/objects/Badge_Relevance__c/fields/BadgeName__c.field-meta.xml
<CustomField>
    <fullName>BadgeName__c</fullName>
    <label>BadgeName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>