force-app/main/default/objects/Badge_Relevance__c/fields/badgeURL__c.field-meta.xml
<CustomField>
    <fullName>badgeURL__c</fullName>
    <label>badgeURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>