force-app/main/default/objects/Badge_Relevance__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>250</length>
    <type>Text</type>
</CustomField>