force-app/main/default/objects/Badge_Relevance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>associatedProducts__c</columns>
    <columns>Ranking__c</columns>
    <columns>associatedTags__c</columns>
    <columns>badgeDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>